# jenkins_pipeline_samples

./: .gitignore
pipelines/demo_files/: jenkinsfile
simple_python_script/: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml
simple_python_script/jenkins_files/: basic_script.sh
simple_python_script/src/simple_python/utils/: data_frames.py
simple_python_script/tests/: test_main.py
